--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   python:
-    image: harrisonlima/conversao-distancia:v1
+    build: .
     command: "python3 -m flask run --host=0.0.0.0"
     ports:
       - 5000:5000
